--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "05-proyecto1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rubiomartinezfeli.github.io/app-pelis/",
+  "homepage": "https://rubiomartinezfeli.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
